--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -150,6 +150,7 @@
     <Compile Include="VREvent\VREventHandlerSettings.cs" />
     <Compile Include="VREvent\VREventPayload.cs" />
     <Compile Include="VREvent\VREventHandler.cs" />
+    <Compile Include="VRMail\VRMail.cs" />
     <Compile Include="VRMail\VRMailAttachement.cs" />
     <Compile Include="VRMail\VRMailAttachements\VRMailAttachmentExcel.cs" />
     <Compile Include="VRMail\VRMailAttachements\VRMailAttachmentPDF.cs" />
