--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/TOne.WhS.Deal.Web.csproj
@@ -193,6 +193,8 @@
     <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\Templates\SwapDealAnalysisInboundSettingsEditorTemplate.html" />
     <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\Templates\SwapDealAnalysisOutboundSettingsEditorTemplate.html" />
     <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\Templates\SwapDealSettingsEditorTemplate.html" />
+    <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\Templates\SwapDealTechnicalSettingsEditorTemplate.html" />
+    <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\vr-whs-deal-swapdeal-technicalsettings-editor.js" />
     <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\vr-whs-deal-swapdealanalysis-settings-inbound-editor.js" />
     <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\vr-whs-deal-swapdealanalysis-settings-outbound-editor.js" />
     <Content Include="WhS_Deal\Directives\Settings\SwapDealSettings\vr-whs-deal-swapdeal-settings-editor.js" />
@@ -205,6 +207,7 @@
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\RouteRulesDefinition\Templates\SwapDealBuyRouteRuleDefinitionSettingsTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\Templates\SwapDealBuyRouteRuleExtendedSettingsTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\Templates\SwapDealBuyRouteRuleGridTemplate.html" />
+    <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\Templates\SwapDealBuyRouteRuleSettingsTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\Templates\SwapDealBuyRouteRuleViewTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\vr-whs-deal-swapdeal-buyrouterule-extendedsettings.js" />
     <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\vr-whs-deal-swapdeal-buyrouterule-grid.js" />
@@ -217,6 +220,7 @@
     <Content Include="WhS_Deal\Directives\SwapDealAnalysis\Templates\SwapDealAnalysisOutboundManagementTemplate.html" />
     <Content Include="WhS_Deal\Directives\SwapDealAnalysis\vr-whs-deal-swapdealanalysis-result.js" />
     <Content Include="WhS_Deal\Directives\SwapDealAnalysis\vr-whs-deal-swapdealanalysis-settings.js" />
+    <Content Include="WhS_Deal\Directives\SwapDeal\RouteRules\vr-whs-deal-swapdeal-buyrouterule-settings.js" />
     <Content Include="WhS_Deal\Directives\SwapDeal\vr-whs-deal-swapdeal-grid.js" />
     <Content Include="WhS_Deal\Directives\SwapDeal\vr-whs-deal-swapdealoutbound-grid.js" />
     <Content Include="WhS_Deal\Directives\SwapDeal\vr-whs-deal-swapdealinbound-grid.js" />
