Refactoring and implementing tiles
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41505

--- a/CarrierPortal/Code/PartnerPortal.Invoice.Entities/PartnerPortal.Invoice.Entities.csproj
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Entities/PartnerPortal.Invoice.Entities.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Invoice\InvoiceAppQuery.cs" />
     <Compile Include="InvoiceViewerType\InvoiceQueryInterceptor.cs" />
     <Compile Include="InvoiceViewerType\InvoiceQueryInterceptorTemplate.cs" />
+    <Compile Include="Invoice\InvoiceTile.cs" />
     <Compile Include="Invoice\InvoiceViewSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
