--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Entities/PartnerPortal.CustomerAccess.Entities.csproj
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Entities/PartnerPortal.CustomerAccess.Entities.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AccountStatement\AccountStatementViewSettings.cs" />
     <Compile Include="AccountStatement\AccountStatementContextHandlerContext.cs" />
     <Compile Include="AnalyticTileInfo.cs" />
+    <Compile Include="CurrentAccountBalanceTile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetailAccount.cs" />
   </ItemGroup>
