Addin schema for code comparison feature
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41538

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -70,6 +70,7 @@
     <Compile Include="BulkActions\BulkActionZoneValidationInput.cs" />
     <Compile Include="BulkActions\Enums.cs" />
     <Compile Include="BulkActions\GetZoneItemsInput.cs" />
+    <Compile Include="CodeComparison\CodeCompareItem.cs" />
     <Compile Include="ImportRatePlan\ImportedRowValidationInput.cs" />
     <Compile Include="ImportRatePlan\ImportedRowValidationResult.cs" />
     <Compile Include="ImportRatePlan\InvalidImportedRow.cs" />
