--- a/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IBigDataServiceDataManager.cs" />
     <Compile Include="IStatusDefinitionDataManager.cs" />
     <Compile Include="IVRComponentTypeDataManager.cs" />
+    <Compile Include="IVREventHandlerDataManager.cs" />
     <Compile Include="IVRLoggableEntityDataManager.cs" />
     <Compile Include="IVRObjectTrackingDataManager.cs" />
     <Compile Include="IVRRuleDataManager.cs" />
