--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Business/TOne.WhS.Invoice.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Business/TOne.WhS.Invoice.Business.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Extensions\CustomerInvoiceGenerator.cs" />
     <Compile Include="Extensions\CustomerInvoiceAccountSettings.cs" />
     <Compile Include="Extensions\CustomerInvoiceSettings.cs" />
+    <Compile Include="Extensions\InvoiceCarrierAccountStatusChangedHandler.cs" />
     <Compile Include="Extensions\InvoiceGeneratorActionPartnerCondition.cs" />
     <Compile Include="Extensions\SupplierInvoiceGenerator.cs" />
     <Compile Include="InvoiceAccountManager.cs" />
