Update BEBridge add Initialization to TargetConvertor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41607

--- a/Vanrise/Code/Vanrise.BEBridge.BP.Activities/Vanrise.BEBridge.BP.Activities.csproj
+++ b/Vanrise/Code/Vanrise.BEBridge.BP.Activities/Vanrise.BEBridge.BP.Activities.csproj
@@ -59,7 +59,7 @@
     <Compile Include="ConvertSourceToTargetBEs.cs" />
     <Compile Include="GetBEReceiveDefinition.cs" />
     <Compile Include="BatchProcessingContext.cs" />
-    <Compile Include="InitializeSynchronizer.cs" />
+    <Compile Include="InitializeTargetBEsData.cs" />
     <Compile Include="PrepareBatchProcessingContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadSourceBEs.cs" />
