Deal Integration with Pricing process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41622

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Business/TOne.WhS.Deal.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Business/TOne.WhS.Deal.Business.csproj
@@ -61,6 +61,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DealProgressManager.cs" />
+    <Compile Include="DealDetailedProgressManager.cs" />
     <Compile Include="ConfigManager.cs" />
     <Compile Include="DealDefinitionManager.cs" />
     <Compile Include="Constants.cs" />
