--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Data.SQL/TOne.WhS.Deal.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Data.SQL/TOne.WhS.Deal.Data.SQL.csproj
@@ -56,6 +56,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DealDetailedProgressDataManager.cs" />
+    <Compile Include="DealProgressDataManager.cs" />
     <Compile Include="DealDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
