--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Data/TOne.WhS.Deal.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Data/TOne.WhS.Deal.Data.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="DealDataManagerFactory.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IDealDetailedProgressDataManager.cs" />
+    <Compile Include="IDealProgressDataManager.cs" />
     <Compile Include="IDealDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
