--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
@@ -48,6 +48,9 @@
   <ItemGroup>
     <Compile Include="DealDefinition\DealDefinitionFilter.cs" />
     <Compile Include="DealDefinition\DealDefinitionInfo.cs" />
+    <Compile Include="DealDefinition\DealEntities.cs" />
+    <Compile Include="DealProgress\DealDetailedProgress.cs" />
+    <Compile Include="DealProgress\DealProgress.cs" />
     <Compile Include="DealSaleZoneGroup.cs" />
     <Compile Include="DealSupplierZoneGroup.cs" />
     <Compile Include="Settings\SwapDealTechnicalSettingData.cs" />
