enhancmenet on code using callback functions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41629

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -130,6 +130,7 @@
     <Compile Include="RoutingCarrierInfo\RoutingCarrierInfo.cs" />
     <Compile Include="RoutingCarrierInfo\RoutingCustomerInfo.cs" />
     <Compile Include="RoutingCarrierInfo\RoutingSupplierInfo.cs" />
+    <Compile Include="SalePricelistChanges\SalePriceListEvaluatedEmail.cs" />
     <Compile Include="SalePricelistChanges\SalePricelistRateChangeDetail.cs" />
     <Compile Include="SalePricelistChanges\SalePricelistRPChange.cs" />
     <Compile Include="SalePricelistChanges\SalePricelistRPChangeDetail.cs" />
