SwitchMapping base implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41633

--- a/NetworkProvisioning/Code/NP.IVSwitch.Business/NP.IVSwitch.Business.csproj
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Business/NP.IVSwitch.Business.csproj
@@ -110,6 +110,7 @@
     <Compile Include="RouteManager.cs" />
     <Compile Include="CustomerRouteManager.cs" />
     <Compile Include="SwitchDashboardManager.cs" />
+    <Compile Include="SwitchMappingManager.cs" />
     <Compile Include="TranslationRuleManager.cs" />
   </ItemGroup>
   <ItemGroup>
