--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
@@ -133,6 +133,7 @@
     <Compile Include="SaleRate\History\SellingProductZoneRateHistoryReader.cs" />
     <Compile Include="SaleRate\History\SellingProductZoneRateHistoryLocator.cs" />
     <Compile Include="SaleRate\OtherSaleRateManager.cs" />
+    <Compile Include="SaleRate\SaleRateReadLastRateNoCache.cs" />
     <Compile Include="ZoneRoutingProduct\SaleEntityZoneRoutingProductHistoryManager.cs" />
     <Compile Include="RoutingProducts\SaleEntityRoutingProductManager.cs" />
     <Compile Include="RoutingProducts\SaleEntityZoneRoutingProductLocator.cs" />
