--- a/Retail/Code/Retail.Invoice.Business/Retail.Invoice.Business.csproj
+++ b/Retail/Code/Retail.Invoice.Business/Retail.Invoice.Business.csproj
@@ -47,6 +47,10 @@
     <Reference Include="Vanrise.Analytic.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Analytic.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Common.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.Business.dll</HintPath>
@@ -59,11 +63,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.GenericData.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Invoice.Business">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Invoice.Business.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Invoice.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Invoice.Entities.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\InvoiceAccountStatusChangedHandler.cs" />
     <Compile Include="Extensions\RetailSubscriberInvoiceGenerator.cs" />
     <Compile Include="Extensions\RetailSubscriberInvoiceSettings.cs" />
     <Compile Include="Extensions\RetailSubscriberPartnerSettings.cs" />
