--- a/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
+++ b/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
@@ -91,6 +91,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InvoiceAccountStatusChangedHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MultiNetSubscriberInvoiceGenerator.cs" />
     <Compile Include="MultiNetSubscriberInvoiceSettings.cs" />
