Implementing invoice account
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41659

--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Settings\SettingInfoFilter.cs" />
     <Compile Include="StatusDefinition\IStatusDefinitionFilter.cs" />
     <Compile Include="UISettingData.cs" />
+    <Compile Include="VRAccountStatus.cs" />
     <Compile Include="VRActionAudit\VRActionAuditDetail.cs" />
     <Compile Include="VRActionAudit\VRActionAuditQuery.cs" />
     <Compile Include="VRActionAudit\VRLoggableEntity.cs" />
