SwitchMapping &  (link To EndPoints, link to Route) Finalizing
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41662

--- a/NetworkProvisioning/Code/NP.IVSwitch.Entities/NP.IVSwitch.Entities.csproj
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Entities/NP.IVSwitch.Entities.csproj
@@ -85,6 +85,8 @@
     <Compile Include="Route\Route.cs" />
     <Compile Include="Route\RouteDetail.cs" />
     <Compile Include="Route\RouteQuery.cs" />
+    <Compile Include="SwitchMapping\EndPointLink.cs" />
+    <Compile Include="SwitchMapping\RouteLink.cs" />
     <Compile Include="SwitchMapping\SwitchMapping.cs" />
     <Compile Include="SwitchMapping\SwitchMappingDetail.cs" />
     <Compile Include="SwitchMapping\SwitchMappingQuery.cs" />
