Add configSource="ConnectionStrings.config" and  file="appSettings.config" concept
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41677

--- a/NetworkProvisioning/Code/NetworkProvisioning.Web/NetworkProvisioning.Web.csproj
+++ b/NetworkProvisioning/Code/NetworkProvisioning.Web/NetworkProvisioning.Web.csproj
@@ -320,6 +320,8 @@
     <Content Include="Web.config.exclude" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="appSettings.config" />
+    <Content Include="ConnectionStrings.config" />
     <None Include="Properties\PublishProfiles\NetworkProvisioning.pubxml" />
   </ItemGroup>
   <PropertyGroup>
