--- a/NetworkProvisioning/Code/NetworkProvisioning.Web/Web.config
+++ b/NetworkProvisioning/Code/NetworkProvisioning.Web/Web.config
@@ -22,14 +22,14 @@
       <exceptionLogger name="DefaultExceptionLogger" type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
-  <connectionStrings>
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=NetworkProvisioning_Configuration;User ID=development;Password=dev!123"/>
+  <connectionStrings configSource="ConnectionStrings.config">
+    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=NetworkProvisioning_Configuration;User ID=development;Password=dev!123"/>
     <add name="TOneV2DBConnString" connectionString="Server=192.168.110.185;Database=NetworkProvisioning_Dev;User ID=development;Password=dev!123"/>
     <add name="LogDBConnString" connectionString="Server=localhost;Database=TOneLogging;User ID=sa;Password=p@ssw0rd;"/>
     <add name="TransactionDBConnString" connectionString="Data Source=localhost;Initial Catalog=TOneTransactionDB;User ID=sa; Password=p@ssw0rd" /> 
-    <add name="MainDBConnString" connectionString=""/>
+    <add name="MainDBConnString" connectionString=""/>-->
   </connectionStrings>
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="Web_ExtendedModulesNames" value=""/>
     <!-- , separated module names to include in web bundle (e.g. Common,VR_Notification,VRInvoice) -->
     <add key="webpages:Version" value="2.0.0.0" />
