--- a/Retail/Code/Retail.MultiNet.Entities/Retail.MultiNet.Entities.csproj
+++ b/Retail/Code/Retail.MultiNet.Entities/Retail.MultiNet.Entities.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountType.cs" />
+    <Compile Include="AddressTypes.cs" />
     <Compile Include="InvoiceDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RDLCInvoiceDetails.cs" />
