--- a/Vanrise/Code/Vanrise.GenericData.MainExtensions/Vanrise.GenericData.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.MainExtensions/Vanrise.GenericData.MainExtensions.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SummaryTransformationBatchRangeRetrievals\SummaryBatchTimeIntervalRange.cs" />
     <Compile Include="VRActions\DataRecordAlertRuleSendEmailAction.cs" />
+    <Compile Include="VRObjectTypes\VRDataRecordFieldComparisonPropertyEvaluator.cs" />
     <Compile Include="VRObjectTypes\VRDataRecordFieldPropertyEvaluator.cs" />
     <Compile Include="VRObjectTypes\VRDataRecordObjectType.cs" />
   </ItemGroup>
